# project-euler

./: .gitignore  Cargo.toml
src/: fibonacci.rs  flags.rs  lib.rs  primes.rs  sudoku.rs
src/primes/: sieve.rs
src/sudoku/: action.rs  board.rs  candidate.rs  digit.rs  event.rs  filter.rs  positions.rs  printer.rs  set.rs  solver.rs  square.rs
src/sudoku/filter/: basic.rs  hidden.rs  intersection.rs  single.rs
