[package]
name = "project-euler"
version = "0.1.0"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "multiple-of-3-and-5_001"
path = "src/bin/001_multiple-of-3-and-5.rs"

[[bin]]
name = "even-fibonacci-numbers-002"
path = "src/bin/002_even-fibonacci-numbers.rs"

[dependencies]
itertools = "0.9"
